update nav for other pages, made section2+3 columns, fix spacing problems

--- a/Phase1Project/css/Index.css
+++ b/Phase1Project/css/Index.css
@@ -1,18 +1,20 @@
 .left{
-    float: left;
+    float: left !important;
+    margin-left: 2%;
 }
 .right{
    float: right !important;
+    margin-right: 2%;
 }
 .clear{
     clear:both;
 }
-.absoluteLeft{
+.logo{
     left:0;
+    margin-right: 2%;
 }
 footer{
-    background: lightgray;
-    opacity: 0.8;
+    background: #262626;
     bottom: 0;
 }
 body{
@@ -20,26 +22,48 @@ body{
     background-repeat: repeat;
     background-size: 100%;
     background-attachment: fixed;
-     background-color: #cccccc;
+    background-color: #cccccc;
 }
 .container{
-
         background: lightgray;
         opacity: 0.90;
-        height: 500px;
+        margin-bottom: auto;
+        padding-bottom: 20px;
 }
-/* .login{
-    background-color: rgb(6, 184, 59);
-    margin-top: 70px;
-    z-index: 1;
+.active{
+    background-color: rgb(156, 82, 82);
+}
+li{
+    margin-left: auto;
+}
+.white-text{
+    color: white;
+}
+.first{
+    margin-top: 60px;
+}
+.divFloat{
+    width: 48%;
+    display: inline-block;
+    background: lightgray;
+    opacity: 0.90;
+    height: 500px;
     text-align: center;
-    margin: 60px auto auto auto;
-    align-items: center;
-    justify-items: center;
-    position:fixed;
-    width:100%;
-    height:100%;
-    top:-50px;
-    left:0px;
-    z-index:3000;
-} */
+    margin-top: 10px;
+    margin-bottom: 5%;
+}
+.last{
+    padding-bottom: 40px;
+    color: white;
+    margin-left: auto;
+}
+.navbar{
+    max-height: 64px;
+}
+.mt-5{
+    margin-top: 10px !important;
+}
+h6{
+    font-size: 15px;
+    color: white;
+}
